app/k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: doomed-apt
  labels:
    app: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
