app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apt-ingress-rules
  namespace: doomed-apt
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/pre-shared-cert: "apt-cert"
    kubernetes.io/ingress.global-static-ip-name: "apartment-project"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend   
            port:
              number: 8080  
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend  
            port:
              number: 80
